# libretro-ps2

./: .gitmodules  MEMORY_SAFETY_FIXES.patch  Makefile  Makefile.common
cmake/: BuildParameters.cmake  SearchForStuff.cmake
common/: AlignedMalloc.h  CMakeLists.txt  Console.cpp  Console.h  HostSys.cpp  Pcsx2Defs.h  RedtapeWindows.h  SingleRegisterTypes.h  Threading.h  VectorIntrin.h  common.vcxproj  common.vcxproj.filters
docs/: multi-isa-verification-gate.md
libretro/: DEV9.cpp  USB.cpp  libretro_core_options.h  main.cpp
pcsx2/: CMakeLists.txt  COP0.cpp  Cache.cpp  FPU.cpp  GS.cpp  GS.h  GameDatabase.cpp  Gif_Unit.cpp  Hw.cpp  MTGS.cpp  MTVU.cpp  MTVU.h  Memory.cpp  Memory.h  MemoryCardProtocol.cpp  PerformanceMetrics.cpp  SaveState.h  Sif0.cpp  Sio.cpp  VMManager.cpp  VUops.cpp  Vif_Unpack.cpp  pcsx2core.vcxproj  pcsx2core.vcxproj.filters  vtlb.cpp  vtlb.h
pcsx2/CDVD/: CDVD.cpp
pcsx2/DEV9/ATA/: HddCreate.cpp
pcsx2/GS/: GS.cpp  GSLocalMemory.cpp  GSLocalMemory.h  GSRegs.h  GSState.cpp  GSVector4i.h  GSVector8i.h
pcsx2/GS/Renderers/Common/: GSDevice.cpp  GSDevice.h  GSRenderer.cpp  GSRenderer.h  GSTexture.cpp  GSTexture.h
pcsx2/GS/Renderers/DX11/: D3D11ShaderCache.cpp  GSDevice11.cpp  GSDevice11.h  GSTexture11.cpp  convert.fx  tfx.fx
pcsx2/GS/Renderers/DX12/: D3D12ShaderCache.cpp  D3D12ShaderCache.h  GSDevice12.cpp
pcsx2/GS/Renderers/HW/: GSHwHack.cpp  GSHwHack.h  GSRendererHW.cpp  GSRendererHW.h  GSTextureCache.cpp  GSTextureCache.h
pcsx2/GS/Renderers/OpenGL/: GLShaderCache.cpp  GSDeviceOGL.cpp  GSTextureOGL.cpp  convert.glsl  tfx_fs.glsl
pcsx2/GS/Renderers/SW/: GSDeviceSW.cpp  GSDrawScanlineCodeGenerator.all.cpp  GSRasterizer.cpp  GSTextureCacheSW.h
pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp  GSDeviceVK.h  VKShaderCache.cpp  convert.glsl  tfx.glsl
pcsx2/GS/Renderers/parallel-gs/: GSRendererPGS.cpp
pcsx2/GS/parallel-gs/Granite/vulkan/: CMakeLists.txt
pcsx2/PAD/: PAD.cpp  PAD.h
pcsx2/SPU2/: ADSR.cpp  Dma.cpp  Mixer.cpp  ReadInput.cpp  RegTable.cpp  Reverb.cpp  ReverbResample.cpp  SndOut.h  defs.h  spu2.h  spu2freeze.cpp  spu2sys.cpp
pcsx2/USB/: USB.h
pcsx2/USB/libretro-usb/: USBinternal.h  bus.cpp  core.cpp  desc.cpp  qusb.h  usb-hid.cpp  usb-hid.h  usb-ohci.cpp
pcsx2/microVU/: microVU_Types.h
pcsx2/ps2/: HwInternal.h
pcsx2/ps2/Iop/: IopHwRead.cpp  IopHwWrite.cpp  IopHw_Internal.h  PsxBios.cpp
pcsx2/x86/: BaseblockEx.h  iR3000Atables.cpp  iR5900Analysis.cpp  iR5900Analysis.h  microVU_Flags.inl
pcsx2/x86/ix86-32/: iR5900-32.cpp  iR5900Arit.cpp  iR5900AritImm.cpp  recVTLB.cpp
